# bdde_mtg

./: .gitignore  README.md  config.yaml  pipeline_utils.py  pyproject.toml  requirements.txt
Tests/: quick test.py  test_api_call.py  test_bronze.py  test_gold.py  test_model_prediction.py  test_model_training.py  test_pipeline_utils.py  test_silver.py
Tests/test_dir/: test_config.yaml
Tests/test_dir/bronze/train/: train_bronze_test.json
Tests/test_dir/gold/predict/predict_gold_test.csv/: .part-00000-573634a4-c886-4184-b70a-dc1f675df79d-c000.csv.crc  part-00000-573634a4-c886-4184-b70a-dc1f675df79d-c000.csv
Tests/test_dir/gold/train/train_gold_test.csv/: .part-00000-f5865858-2788-4aea-8e70-efc4dfdfdffc-c000.csv.crc  part-00000-f5865858-2788-4aea-8e70-efc4dfdfdffc-c000.csv
Tests/test_dir/manifest/: train_manifest.json
Tests/test_dir/silver/predict/predict_silver_test.csv/: .part-00000-b994d905-c513-46c2-aa83-9d17d2e23b54-c000.csv.crc  part-00000-b994d905-c513-46c2-aa83-9d17d2e23b54-c000.csv
Tests/test_dir/silver/train/train_silver_test.csv/: .part-00000-68115703-b176-452e-b064-63b54d162998-c000.csv.crc  part-00000-68115703-b176-452e-b064-63b54d162998-c000.csv
ingestion/: bronze.py  silver.py
model/: model_prediction.py  model_training.py
pipeline notebooks/: bronze_pipeline.py  gold_pipeline.py  predict_pipeline.py  silver_pipeline.py  train_pipeline.py
src/: pipeline_utils.py
src/ingestion/: __init__.py  bronze.py  bronze_spark.py  gold.py
src/model/: __init__.py  model_prediction.py  model_training.py
